c2prj1_cards/grade.txt
Grading at Sat Aug  3 07:24:25 UTC 2019
Compiling cards.c
cards.c: In function ‘suit_letter’:
cards.c:79:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Could not compile your card.c!

Overall Grade: FAILED
